update lab 2, tweak lab 1

--- a/01_intro_to_r/intro_to_r.html
+++ b/01_intro_to_r/intro_to_r.html
@@ -1652,6 +1652,7 @@ div.tocify {
 <p>This lab will occur remotely and in pairs (there may be one team of three people). For those of you participating synchronously, you will find the Zoom room information on <a href="https://moodle.smith.edu/">Moodle</a>. I will assign you to random breakout rooms. I will be available in the main Zoom room to answer questions. If you have a question or technical problem, click the “Ask for Help” button (it looks like a question mark) in the meeting controls, and I will be alerted to join your breakout room.</p>
 <p>For those of you participating asynchronously, alert me to technical challengs over Slack DM, and I will get back to you as soon as possible. For questions about the content of the lab, please sign up for an office hour time block.</p>
 <p>Each of you should be writing and running code, examining output, and answering the exercises throughout the lab. However, you only need to turn in one final lab report. To do so, one of you can be the main recorder of answers in the lab document. It may be helpful to share your screen. You will be working with this same partner/group for the next lab, so you will switch roles next week.</p>
+<p>You all should also feel free to ask and answer questions amongst yourselves via Zoom if participating synchronously or via Slack if participating asynchronously. Please note at the end of the lab document who you consulted for help.</p>
 </div>
 <div id="the-rstudio-interface" class="section level2">
 <h2>The RStudio Interface</h2>
